--- a/scss/_teachers.scss
+++ b/scss/_teachers.scss
@@ -1,4 +1,4 @@
-.teacherH2 {
+.teacherH1 {
   text-align: center;
   color: #006341;
   letter-spacing: 4px;
@@ -6,64 +6,46 @@
   margin-top: 5%;
 }
 
-.teacherH4{
+.teacherH5{
 text-align: center;
-
-
 }
 
 .box_1, .box_2, .box_3 {
-
   background-color: #F5F5F5;
-
   margin-top: 3%;
-
   height: 70%;
 
 }
 
 .box_3{
   margin-bottom: 7%;
-
 }
 
 .teacher {
-
   margin: 5%;
   padding-top: 3%;
 }
 
 .teacherIMG {
-
   width: 20%;
-
   border-radius: 50%;
-
   margin: 2%;
-
   float: left;
-
   box-shadow: 5px 5px 10px grey;
   margin-right: 6%;
 
 }
 
 .email a {
-
   color: #006341;
-
 }
 
 .tparagraph {
-
   font-size: 20px;
   color: #30303A;
-
 }
 
 
 .tNames {
-
   color: #30303A;
-
 }
